--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -11,7 +11,7 @@
     "API": "htpps://localhost:5001/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=202.143.110.154,1443;Initial Catalog=JeeAccount;User ID=jeeaccount;Password=Je3@cCountD$ev",
+    "DefaultConnection": "Data Source=202.143.110.154,1443;Initial Catalog=JeeAccount;User ID=jeeaccount;Password=Je3@cCountD$ev"
   },
   "KafkaConfig": {
     "Brokers": "jee.vn:9093,jee.vn:9094,jee.vn:9095",
@@ -24,7 +24,5 @@
   "SyncService": {
   },
   "AsyncService": {
-    "groupTest50": "group-test-50",
-    "asyncLogger": "async-logger"
   }
 }
