--- a/JeeAccount/appsettings.json
+++ b/JeeAccount/appsettings.json
@@ -6,23 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "JeeAccount": {
-    "API": "htpps://localhost:5001/"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=202.143.110.154,1443;Initial Catalog=JeeAccount;User ID=jeeaccount;Password=Je3@cCountD$ev"
-  },
-  "KafkaConfig": {
-    "Brokers": "kafka1:9093,kafka2:9094,kafka3:9095",
-    "ProjectName": "jee-account"
-  },
-  "VaultConfig": {
-    "Endpoint": "https://vault.jee.vn",
-    "Token": "s.j9o2MvtdSSeTT0dvFH8SAbQ9"
-  },
-  "SyncService": {
-  },
-  "AsyncService": { 
-  }
+  "AllowedHosts": "*"
 }
