--- a/JeeAccount/Dockerfile
+++ b/JeeAccount/Dockerfile
@@ -1,8 +1,3 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -12,7 +7,7 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["JeeAccount/JeeAccount.csproj", "JeeAccount/"]
 RUN dotnet restore "JeeAccount/JeeAccount.csproj"
-COPY . .
+COPY JeeAccount JeeAccount/
 WORKDIR "/src/JeeAccount"
 RUN dotnet build "JeeAccount.csproj" -c Release -o /app/build
 
