phong update appseting development

--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "JeeAccount": {
-    "API": "htpps://localhost:5001/"
+    "API": "https://localhost:5001/"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=202.143.110.154,1443;Initial Catalog=JeeAccount;User ID=jeeaccount;Password=Je3@cCountD$ev"
