--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "rtl": "webpack --config webpack-rtl.config.js"
+    "rtl": "webpack --config webpack-rtl.config.js",
+    "start_wls2": "ng serve --poll=2000 --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
