--- a/JeeAccount/Dockerfile
+++ b/JeeAccount/Dockerfile
@@ -17,4 +17,4 @@ RUN dotnet publish "JeeAccount.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "JeeAccount.dll"]
+ENTRYPOINT ["dotnet", "JeeAccount.dll"]npm 
