--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /BackEnd/Properties/launchSettings.json
 /BackEnd/BackEnd.csproj.user
 /.vscode
+/JeeAccount/.vs/JeeAccount/v16
+/JeeAccount/.vs/VSWorkspaceState.json
+/JeeAccount/.vs/slnx.sqlite
