--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -17,6 +17,9 @@
     "Brokers": "jee.vn:9093,jee.vn:9094,jee.vn:9095",
     "ProjectName": "jee-account"
   },
+  "KafkaTopic": {
+    "TopicAddNewCustomer": "TopicAddNewCustomer",
+  },
   "VaultConfig": {
     "Endpoint": "https://vault.jee.vn",
     "Token": "s.j9o2MvtdSSeTT0dvFH8SAbQ9"
