--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -18,11 +18,11 @@
     "ProjectName": "jee-account"
   },
   "KafkaTopic": {
-    "TopicAddNewCustomer": "TopicAddNewCustomer",
+    "TopicAddNewCustomer": "jeeplatform.initialization"
   },
   "VaultConfig": {
     "Endpoint": "https://vault.jee.vn",
-    "Token": "s.j9o2MvtdSSeTT0dvFH8SAbQ9"
+    "Token": "s.CnO0sRfOCIvMAYcSnoceE1A5"
   },
   "SyncService": {
   },
