--- a/JeeAccount/Properties/launchSettings.json
+++ b/JeeAccount/Properties/launchSettings.json
@@ -39,7 +39,7 @@
       "launchBrowser": true,
       "launchUrl": "https://localhost:5001/swagger",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5000",
+        "ASPNETCORE_URLS": "https://localhost:5001",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "distributionName": ""
