--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -34,9 +34,11 @@
     "@ngx-translate/core": "^13.0.0",
     "angular-gridster2": "^11.1.4",
     "angular-in-memory-web-api": "^0.11.0",
+    "angular-ui-scroll": "^1.8.2",
     "apexcharts": "^3.20.0",
     "bootstrap": "^4.6.0",
     "clipboard": "^2.0.6",
+    "emoji-mart": "^3.0.1",
     "highlight.js": "^10.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
     "jwt-decode": "^3.1.2",
