--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@ctrl/ngx-emoji-mart": "^6.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ionic-native/camera": "^5.31.1",
     "@ionic-native/core": "^5.31.1",
@@ -38,7 +39,6 @@
     "apexcharts": "^3.20.0",
     "bootstrap": "^4.6.0",
     "clipboard": "^2.0.6",
-    "emoji-mart": "^3.0.1",
     "highlight.js": "^10.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
     "jwt-decode": "^3.1.2",
