--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -21,7 +21,8 @@
     "Brokers": "jee.vn:9093,jee.vn:9094,jee.vn:9095",
     "ProjectName": "jee-account",
     "TopicProduce": {
-      "jeeplatformInitialization": "jeeplatform.initialization"
+      "JeeplatformInitialization": "jeeplatform.initialization",
+      "JeeplatformPostcomment": "jeeplatform.postcomment"
     },
     "TopicConsume": {
       "JeeplatformInitializationAppupdate": "jeeplatform.initialization.appupdate"
@@ -29,5 +30,12 @@
     "Consumer": {
       "JeeAccountGroup": "jeeaccount-consumer-group"
     }
+  },
+  "MinioConfig": {
+    "MinioSSL": "true",
+    "MinioServer": "cdn.jee.vn"
+  },
+  "Host": {
+    "JeeComment_API": "https://localhost:5005"
   }
 }
