--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -1,12 +1,4 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
   "VaultConfig": {
     "Endpoint": "https://vault.jee.vn",
     "Token": "s.ucWXuLsJ4pRQkp7aCuL81L6R"
@@ -18,21 +10,9 @@
     }
   },
   "KafkaConfig": {
-    "Brokers": "jee.vn:9093,jee.vn:9094,jee.vn:9095",
-    "ProjectName": "jee-account",
-    "TopicProduce": {
-      "JeeplatformInitialization": "jeeplatform.initialization",
-      "JeeplatformPostcomment": "jeeplatform.postcomment"
-    },
-    "TopicConsume": {
-      "JeeplatformInitializationAppupdate": "jeeplatform.initialization.appupdate"
-    },
-    "Consumer": {
-      "JeeAccountGroup": "jeeaccount-consumer-group"
-    }
+    "Brokers": "jee.vn:9093,jee.vn:9094,jee.vn:9095"
   },
   "MinioConfig": {
-    "MinioSSL": "true",
     "MinioServer": "cdn.jee.vn"
   },
   "Host": {
