--- a/JeeAccount/appsettings.json
+++ b/JeeAccount/appsettings.json
@@ -6,5 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KafkaConfig": {
+    "ProjectName": "jee-account",
+    "TopicProduce": {
+      "JeeplatformInitialization": "jeeplatform.initialization",
+      "JeeplatformPostcomment": "jeeplatform.postcomment"
+    },
+    "TopicConsume": {
+      "JeeplatformInitializationAppupdate": "jeeplatform.initialization.appupdate"
+    },
+    "Consumer": {
+      "JeeAccountGroup": "jeeaccount-consumer-group"
+    }
+  },
+  "MinioConfig": {
+    "MinioSSL": "true"
+  }
 }
