--- a/BackEnd/JeeAccount/Dockerfile_prod
+++ b/BackEnd/JeeAccount/Dockerfile_prod
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY BackEnd/JeeAccount/package.json ./
 RUN yarn install
 COPY BackEnd/JeeAccount /app/
-RUN yarn build --prod
+RUN yarn build
 
 FROM nginx:1.19.8-alpine
 COPY backend.nginx.conf /etc/nginx/conf.d/default.conf
