--- a/scripts/build.yml
+++ b/scripts/build.yml
@@ -5,10 +5,10 @@ services:
     image: ${REGISTRY_HOST}/${REGISTRY_PUBLISHER}/${PROJECT_NAME}-api:latest
     build:
       context: ../
-      dockerfile: ./JeeAccount/Dockerfile
+      dockerfile: ./JeeAccount/${DOCKERFILE_NAME}
 
   backend:
     image: ${REGISTRY_HOST}/${REGISTRY_PUBLISHER}/${PROJECT_NAME}-backend:latest
     build:
       context: ../
-      dockerfile: ./BackEnd/JeeAccount/Dockerfile
+      dockerfile: ./BackEnd/JeeAccount/${DOCKERFILE_NAME}
