--- a/JeeAccount/appsettings.Development.json
+++ b/JeeAccount/appsettings.Development.json
@@ -36,6 +36,7 @@
     "MinioServer": "cdn.jee.vn"
   },
   "Host": {
-    "JeeComment_API": "https://localhost:5005"
+    "JeeComment_API": "https://localhost:5005",
+    "JeeHR_API": "https://jeehr-api.jee.vn"
   }
 }
