--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -47,6 +47,7 @@
     "ng-apexcharts": "^1.5.1",
     "ng-dynamic-component": "^8.0.0",
     "ng-inline-svg": "^10.1.0",
+    "ngx-auto-scroll": "^1.1.0",
     "ngx-avatar": "^4.0.0",
     "ngx-clipboard": "^13.0.1",
     "ngx-highlightjs": "^4.1.3",
