--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/firebase-x": "^5.31.1",
     "@ionic-native/splash-screen": "^5.31.1",
+    "@microsoft/signalr": "^5.0.8",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngx-translate/core": "^13.0.0",
     "angular-gridster2": "^11.1.4",
@@ -49,6 +50,7 @@
     "ng-inline-svg": "^10.1.0",
     "ngx-auto-scroll": "^1.1.0",
     "ngx-avatar": "^4.0.0",
+    "ngx-bootstrap": "^7.0.0",
     "ngx-clipboard": "^13.0.1",
     "ngx-highlightjs": "^4.1.3",
     "ngx-mat-select-search": "^3.2.0",
