--- a/BackEnd/JeeAccount/tsconfig.json
+++ b/BackEnd/JeeAccount/tsconfig.json
@@ -18,6 +18,5 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
-  }
+    "strictInjectionParameters": true  }
 }
