--- a/BackEnd/JeeAccount/tsconfig.json
+++ b/BackEnd/JeeAccount/tsconfig.json
@@ -18,5 +18,7 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true  }
+    "strictTemplates": true,
+    "strictInjectionParameters": true
+  }
 }
