--- a/JeeAccount/appsettings.json
+++ b/JeeAccount/appsettings.json
@@ -23,5 +23,9 @@
   "MinioConfig": {
     "MinioSSL": "true",
     "MinioServer": "cdn.jee.vn"
+  },
+  "Host": {
+    "JeeComment_API": "https://jeecomment-api.jee.vn",
+    "JeeHR_API": "https://jeehr-api.jee.vn"
   }
 }
