--- a/BackEnd/JeeAccount/tsconfig.json
+++ b/BackEnd/JeeAccount/tsconfig.json
@@ -19,6 +19,6 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictTemplates": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
   }
 }
