--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -61,7 +61,8 @@
     "rxjs": "~6.6.0",
     "socicon": "^3.0.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "dps-lib": "file:dps-lib-3.1.11.tgz"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
@@ -84,7 +85,6 @@
     "typescript": "~4.0.2",
     "webpack-cli": "^3.3.12",
     "webpack-messages": "^2.0.4",
-    "webpack-rtl-plugin": "^2.0.0",
-    "dps-lib": "file:dps-lib-3.1.11.tgz"
+    "webpack-rtl-plugin": "^2.0.0"
   }
 }
