--- a/BackEnd/JeeAccount/Dockerfile_prod
+++ b/BackEnd/JeeAccount/Dockerfile_prod
@@ -1,6 +1,7 @@
 FROM node:14.15.5-slim As builder
 WORKDIR /app
 COPY BackEnd/JeeAccount/package.json ./
+COPY BackEnd/JeeAccount/dps-lib-3.1.11.tgz ./
 RUN yarn install
 COPY BackEnd/JeeAccount /app/
 RUN yarn build
