--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -41,6 +41,7 @@
     "apexcharts": "^3.20.0",
     "bootstrap": "^4.6.0",
     "clipboard": "^2.0.6",
+    "dps-lib": "file:dps-lib-3.1.11.tgz",
     "highlight.js": "^10.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
     "jwt-decode": "^3.1.2",
@@ -61,8 +62,7 @@
     "rxjs": "~6.6.0",
     "socicon": "^3.0.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "dps-lib": "file:dps-lib-3.1.11.tgz"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
