--- a/JeeAccount/appsettings.json
+++ b/JeeAccount/appsettings.json
@@ -11,13 +11,16 @@
     "ProjectName": "jee-account",
     "TopicProduce": {
       "JeeplatformInitialization": "jeeplatform.initialization",
-      "JeeplatformPostcomment": "jeeplatform.postcomment"
+      "JeeplatformPostcomment": "jeeplatform.postcomment",
+      "JeeplatformUpdateAdmin": "jeeplatform.updateadmin"
     },
     "TopicConsume": {
-      "JeeplatformInitializationAppupdate": "jeeplatform.initialization.appupdate"
+      "JeeplatformInitializationAppupdate": "jeeplatform.initialization.appupdate",
+      "JeeplatformUpdateadminAppupdate": "jeeplatform.updateadmin.appupdate"
     },
     "Consumer": {
-      "JeeAccountGroup": "jeeaccount-consumer-group"
+      "JeeAccountGroup": "jeeaccount-consumer-group",
+      "JeePermissionGroup": "permission-consumer-group"
     }
   },
   "MinioConfig": {
