--- a/scripts/swarm.yml
+++ b/scripts/swarm.yml
@@ -24,6 +24,7 @@ services:
       Host__JeeComment_API: ${HOST_JEECOMMENT_API}
       AppConfig__Connection: ${APP_CONNECTION}
       AppConfig__Secrectkey__JeeCustomer: ${APP_KEY_JEECUSTOMER}
+      AppConfig__AppCode_JeeHR: ${APPCODE_JEEHR}
     deploy:
       mode: replicated
       replicas: 1
