--- a/scripts/temp.swarm.yml
+++ b/scripts/temp.swarm.yml
@@ -11,7 +11,7 @@ networks:
 services:
   api:
     image: ${REGISTRY_HOST}/${REGISTRY_PUBLISHER}/${PROJECT_NAME}-api:latest
-    networks: 
+    networks:
       - vault_vault_network
       - traefik_traefik-network
       - kafka-network
@@ -24,6 +24,7 @@ services:
       Host__JeeComment_API: ${HOST_JEECOMMENT_API}
       AppConfig__Connection: ${APP_CONNECTION}
       AppConfig__Secrectkey__JeeCustomer: ${APP_KEY_JEECUSTOMER}
+      AppConfig__AppCode_JeeHR: ${APPCODE_JEEHR}
     deploy:
       mode: replicated
       replicas: 1
