--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -54,6 +54,7 @@
     "ngx-avatar": "^4.0.0",
     "ngx-bootstrap": "^7.0.0",
     "ngx-clipboard": "^13.0.1",
+    "ngx-cookie-service": "^12.0.3",
     "ngx-highlightjs": "^4.1.3",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-perfect-scrollbar": "^9.0.0",
