--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -58,6 +58,7 @@
     "ngx-highlightjs": "^4.1.3",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-smart-popover": "^1.4.0",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.5.0",
     "rxjs": "~6.6.0",
