--- a/JeeAccount/JeeAccount.csproj
+++ b/JeeAccount/JeeAccount.csproj
@@ -46,4 +46,6 @@
     </Reference>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
