--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build --configuration=production",
     "build_stage": "ng build --configuration=staging",
+    "build_docker": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
