--- a/BackEnd/JeeAccount/package.json
+++ b/BackEnd/JeeAccount/package.json
@@ -4,9 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration=production",
-    "build_stage": "ng build --configuration=staging",
-    "build_docker": "ng build",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
